hero section completed

--- a/index.html
+++ b/index.html
@@ -26,10 +26,32 @@
         <div class="logo">Bangladesh 2.0</div>
 
         <div class="">
-          <button class="SignInButton">Sign In</button>
+          <button class="sign_in_button">Sign In</button>
         </div>
       </nav>
     </header>
-    <!-- header section start  -->
+    <!-- header section end  -->
+
+    <!-- main section start -->
+    <main>
+      <!-- hero section start -->
+      <section class="hero">
+        <div class="content">
+          <h4>Bangladesh 2.0</h4>
+          <h1>
+            Idea , innovation,<br />
+            vision and challenges in<br />
+            New Bangladesh.
+          </h1>
+          <button class="explore_button">Explore New Bangladesh</button>
+        </div>
+
+        <div class="image">
+          <img src="assets/hero.png" alt="Hero Image" />
+        </div>
+      </section>
+      <!-- hero section end -->
+    </main>
+    <!-- main section end -->
   </body>
 </html>
