pillars of bangladesh section completed

--- a/index.html
+++ b/index.html
@@ -51,6 +51,52 @@
         </div>
       </section>
       <!-- hero section end -->
+
+      <!-- pillars of "bangladesh 2.0" section start -->
+      <section class="pillars_of_bangladesh">
+        <h2>Pillars of "Bangladesh 2.0"</h2>
+
+        <!-- pillars of "bangladesh 2.0" card section start -->
+        <div class="cards">
+          <div class="card">
+            <img src="assets/card-icon.png" alt="" />
+            <h4>Innovation</h4>
+            <p>
+              Dolor sit amet consectetur elit. Facilis quas, ducimus labore
+              sequi quos
+            </p>
+          </div>
+
+          <div class="card">
+            <img src="assets/card-icon.png" alt="" />
+            <h4>Sustainability</h4>
+            <p>
+              Dolor sit amet consectetur elit. Facilis quas, ducimus labore
+              sequi quos
+            </p>
+          </div>
+
+          <div class="card">
+            <img src="assets/card-icon.png" alt="" />
+            <h4>Infrastructure</h4>
+            <p>
+              Dolor sit amet consectetur elit. Facilis quas, ducimus labore
+              sequi quos
+            </p>
+          </div>
+
+          <div class="card">
+            <img src="assets/card-icon.png" alt="" />
+            <h4>Empowerment</h4>
+            <p>
+              Dolor sit amet consectetur elit. Facilis quas, ducimus labore
+              sequi quos
+            </p>
+          </div>
+          <!-- pillars of "bangladesh 2.0" card section end -->
+        </div>
+      </section>
+      <!-- pillars of "bangladesh 2.0" section start -->
     </main>
     <!-- main section end -->
   </body>
