--- a/index.html
+++ b/index.html
@@ -96,7 +96,53 @@
           <!-- pillars of "bangladesh 2.0" card section end -->
         </div>
       </section>
-      <!-- pillars of "bangladesh 2.0" section start -->
+      <!-- pillars of "bangladesh 2.0" section end -->
+
+      <!-- The Vision of Future start start -->
+      <section class="the_vision_of_future">
+        <h2>The Vision of Future</h2>
+        <p>
+          Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+          cutting-edge technology, promoting inclusive growth, and ensuring
+          sustainability. With initiatives in renewable energy, digital
+          transformation, and robust infrastructure, the country is set to
+          become a global model of development.
+        </p>
+
+        <!-- The Vision of Future card section start -->
+        <div class="cards">
+          <div class="card card1">
+            <img src="assets/card-icon.png" alt="" />
+            <h4>Digital Transformation</h4>
+            <p>
+              Creating a nationwide digital ecosystem to enhance connectivity
+              and access to services for all citizens.
+            </p>
+            <button class="learn_more learn_more1">Learn More</button>
+          </div>
+
+          <div class="card card2">
+            <img src="assets/card-icon.png" alt="" />
+            <h4>Green Energy</h4>
+            <p class="card2_p">
+              Investments in solar and wind energy to ensure a sustainable and
+              eco-friendly future.
+            </p>
+            <button class="learn_more learn_more2">Learn More</button>
+          </div>
+
+          <div class="card card3">
+            <img src="assets/card-icon.png" alt="" />
+            <h4>Modern Infrastructure</h4>
+            <p>
+              Building state-of-the-art infrastructure to support economic
+              growth and global competitiveness.
+            </p>
+            <button class="learn_more learn_more3">Learn More</button>
+          </div>
+        </div>
+      </section>
+      <!-- The Vision of Future start end -->
     </main>
     <!-- main section end -->
   </body>
