dr. muhammad yunus section completed

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </section>
       <!-- pillars of "bangladesh 2.0" section end -->
 
-      <!-- The Vision of Future start start -->
+      <!-- the vision of future section start -->
       <section class="the_vision_of_future">
         <h2>The Vision of Future</h2>
         <p>
@@ -109,7 +109,7 @@
           become a global model of development.
         </p>
 
-        <!-- The Vision of Future card section start -->
+        <!-- the vision of future card section start -->
         <div class="cards">
           <div class="card card1">
             <img src="assets/card-icon.png" alt="" />
@@ -141,8 +141,28 @@
             <button class="learn_more learn_more3">Learn More</button>
           </div>
         </div>
+        <!-- the vision of future card section end -->
       </section>
-      <!-- The Vision of Future start end -->
+      <!-- the vision of future section end -->
+
+      <!-- dr. muhammad yunus section start -->
+      <section class="muhammad_yunus">
+        <img src="assets/quote-bg.png" alt="" />
+        <p class="yunus_first_p">
+          "Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis
+          quas, ducimus labore sequi quos deserunt optio id repellendus tempora
+          veniam amet porro corporis exercitationem numquam debitis culpa
+          laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus
+          fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab
+          aliquid modi? Est vitae neque esse, cumque, quam tenetur rem earum
+          eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam
+          architecto soluta necessitatibus vero?"
+        </p>
+        <h3>Dr. Muhammad Yunus</h3>
+        <p>Chief Adviser of the People's Republic of Bangladesh</p>
+
+      </section>
+      <!-- dr. muhammad yunus section end -->
     </main>
     <!-- main section end -->
   </body>
