--- a/index.html
+++ b/index.html
@@ -160,9 +160,62 @@
         </p>
         <h3>Dr. Muhammad Yunus</h3>
         <p>Chief Adviser of the People's Republic of Bangladesh</p>
-
       </section>
       <!-- dr. muhammad yunus section end -->
+
+      <!-- your opinion matters section start -->
+      <section class="opinion_matters">
+        <h1>Your Opinion Matters</h1>
+        <div class="tabels">
+          <div class="questions_opinion">
+            <div class="h3">Questions</div>
+            <div class="h3">Select Your Opinion</div>
+          </div>
+          <table>
+            <tbody>
+              <tr>
+                <td class="questions">
+                  Do you believe Bangladesh is on the right path toward becoming
+                  a developed nation?
+                </td>
+                <td>
+                  <select name="" id="">
+                    <option>Yes, I Agree</option>
+                    <option>No, I don’t agree</option>
+                  </select>
+                </td>
+              </tr>
+
+              <tr>
+                <td class="questions">
+                  Do you believe Bangladesh is on the right path toward becoming
+                  a developed nation?
+                </td>
+                <td>
+                  <select name="" id="">
+                    <option>Yes, I Agree</option>
+                    <option>No, I don’t agree</option>
+                  </select>
+                </td>
+              </tr>
+
+              <tr>
+                <td class="questions">
+                  Do you believe Bangladesh is on the right path toward becoming
+                  a developed nation?
+                </td>
+                <td>
+                  <select name="" id="">
+                    <option>Yes, I Agree</option>
+                    <option>No, I don’t agree</option>
+                  </select>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </section>
+      <!-- your opinion matters section end -->
     </main>
     <!-- main section end -->
   </body>
