--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               Creating a nationwide digital ecosystem to enhance connectivity
               and access to services for all citizens.
             </p>
-            <button class="learn_more learn_more1">Learn More</button>
+            <button class="buttons learn_more learn_more1">Learn More</button>
           </div>
 
           <div class="card card2">
@@ -128,7 +128,7 @@
               Investments in solar and wind energy to ensure a sustainable and
               eco-friendly future.
             </p>
-            <button class="learn_more learn_more2">Learn More</button>
+            <button class="buttons learn_more learn_more2">Learn More</button>
           </div>
 
           <div class="card card3">
@@ -138,7 +138,7 @@
               Building state-of-the-art infrastructure to support economic
               growth and global competitiveness.
             </p>
-            <button class="learn_more learn_more3">Learn More</button>
+            <button class="buttonslearn_more learn_more3">Learn More</button>
           </div>
         </div>
         <!-- the vision of future card section end -->
@@ -163,7 +163,7 @@
       </section>
       <!-- dr. muhammad yunus section end -->
 
-      <!-- your opinion matters section start -->
+      <!-- opinion matters section start -->
       <section class="opinion_matters">
         <h1>Your Opinion Matters</h1>
         <div class="tabels">
@@ -215,7 +215,87 @@
           </table>
         </div>
       </section>
-      <!-- your opinion matters section end -->
+      <!-- opinion matters section end -->
+
+      <!-- recent news section start -->
+      <section class="recent_news">
+        <h2>Recent News</h2>
+        <p>
+          Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+          cutting-edge technology, promoting inclusive growth, and ensuring
+          sustainability. With initiatives in renewable energy, digital
+          transformation, and robust infrastructure, the country is set to
+          become a global model of development.
+        </p>
+
+        <!-- bangladesh launches new satellite one-->
+        <div class="bangladesh_launches_new_satellite">
+          <div>
+            <img class="satelite" src="assets/satelite.png" alt="" />
+          </div>
+
+          <div class="content">
+            <h2>Bangladesh Launches New Satellite</h2>
+            <img class="al_jazeera" src="assets/al-jazeera.png" alt="" />
+            <h5>Time: 10.25 PM</h5>
+            <h6>
+              Not until the creation and maintenance of decent conditions of
+              life for all people are recognized and accepted as a common
+              obligation of all people and all countries—not until then shall
+              we, with a certain degree of justification, be able to speak of
+              humankind as civilized
+            </h6>
+
+            <div class="read_more">Read More</div>
+          </div>
+        </div>
+
+        <!-- bangladesh launches new satellite two-->
+        <div class="bangladesh_launches_new_satellite">
+          <div class="content">
+            <h2>Bangladesh Launches New Satellite</h2>
+            <img class="al_jazeera" src="assets/al-jazeera.png" alt="" />
+            <h5>Time: 10.25 PM</h5>
+            <h6>
+              Not until the creation and maintenance of decent conditions of
+              life for all people are recognized and accepted as a common
+              obligation of all people and all countries—not until then shall
+              we, with a certain degree of justification, be able to speak of
+              humankind as civilized
+            </h6>
+
+            <div class="read_more">Read More</div>
+          </div>
+
+          <div>
+            <img class="satelite" src="assets/satelite.png" alt="" />
+          </div>
+        </div>
+
+        <!-- bangladesh launches new satellite three-->
+        <div class="bangladesh_launches_new_satellite">
+          <div>
+            <img class="satelite" src="assets/satelite.png" alt="" />
+          </div>
+
+          <div class="content">
+            <h2>Bangladesh Launches New Satellite</h2>
+            <img class="al_jazeera" src="assets/al-jazeera.png" alt="" />
+            <h5>Time: 10.25 PM</h5>
+            <h6>
+              Not until the creation and maintenance of decent conditions of
+              life for all people are recognized and accepted as a common
+              obligation of all people and all countries—not until then shall
+              we, with a certain degree of justification, be able to speak of
+              humankind as civilized
+            </h6>
+
+            <div class="read_more">Read More</div>
+          </div>
+        </div>
+      </section>
+
+      <!-- recent news section end -->
     </main>
     <!-- main section end -->
   </body>
