--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               Creating a nationwide digital ecosystem to enhance connectivity
               and access to services for all citizens.
             </p>
-            <button class="buttons learn_more learn_more1">Learn More</button>
+            <button class="learn_more learn_more1">Learn More</button>
           </div>
 
           <div class="card card2">
@@ -128,7 +128,7 @@
               Investments in solar and wind energy to ensure a sustainable and
               eco-friendly future.
             </p>
-            <button class="buttons learn_more learn_more2">Learn More</button>
+            <button class="learn_more learn_more2">Learn More</button>
           </div>
 
           <div class="card card3">
@@ -138,7 +138,7 @@
               Building state-of-the-art infrastructure to support economic
               growth and global competitiveness.
             </p>
-            <button class="buttonslearn_more learn_more3">Learn More</button>
+            <button class="learn_more learn_more3">Learn More</button>
           </div>
         </div>
         <!-- the vision of future card section end -->
@@ -149,14 +149,14 @@
       <section class="muhammad_yunus">
         <img src="assets/quote-bg.png" alt="" />
         <p class="yunus_first_p">
-          "Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis
-          quas, ducimus labore sequi quos deserunt optio id repellendus tempora
-          veniam amet porro corporis exercitationem numquam debitis culpa
-          laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus
-          fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab
-          aliquid modi? Est vitae neque esse, cumque, quam tenetur rem earum
-          eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam
-          architecto soluta necessitatibus vero?"
+          "Dr. Muhammad Yunus, a Nobel Laureate and the pioneer of microfinance,
+          has significantly contributed to global poverty alleviation through
+          his innovative concept of Grameen Bank. His leadership as the Chief
+          Adviser of the People's Republic of Bangladesh during a crucial
+          transitional period highlighted his dedication to public service and
+          sustainable development. A visionary economist, Dr. Yunus continues to
+          inspire millions worldwide with his efforts to create a world free of
+          poverty and social injustice."
         </p>
         <h3>Dr. Muhammad Yunus</h3>
         <p>Chief Adviser of the People's Republic of Bangladesh</p>
@@ -237,7 +237,7 @@
           <div class="content">
             <h2>Bangladesh Launches New Satellite</h2>
             <img class="al_jazeera" src="assets/al-jazeera.png" alt="" />
-            <h5>Time: 10.25 PM</h5>
+            <h5>Time: 10.25 PM Time: 10.25 PM</h5>
             <h6>
               Not until the creation and maintenance of decent conditions of
               life for all people are recognized and accepted as a common
@@ -255,7 +255,7 @@
           <div class="content">
             <h2>Bangladesh Launches New Satellite</h2>
             <img class="al_jazeera" src="assets/al-jazeera.png" alt="" />
-            <h5>Time: 10.25 PM</h5>
+            <h5>Time: 10.25 PM Time: 10.25 PM</h5>
             <h6>
               Not until the creation and maintenance of decent conditions of
               life for all people are recognized and accepted as a common
@@ -281,7 +281,7 @@
           <div class="content">
             <h2>Bangladesh Launches New Satellite</h2>
             <img class="al_jazeera" src="assets/al-jazeera.png" alt="" />
-            <h5>Time: 10.25 PM</h5>
+            <h5>Time: 10.25 PM Time: 10.25 PM</h5>
             <h6>
               Not until the creation and maintenance of decent conditions of
               life for all people are recognized and accepted as a common
@@ -294,8 +294,47 @@
           </div>
         </div>
       </section>
-
       <!-- recent news section end -->
+
+      <!-- donate today section start -->
+      <section class="donate_today">
+        <h2>Donate Today</h2>
+        <p>
+          Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+          cutting-edge technology, promoting inclusive growth, and ensuring
+          sustainability. With initiatives in renewable energy, digital
+          transformation, and robust infrastructure.
+        </p>
+
+        <!-- take card section start -->
+        <div class="taka_cards">
+          <div>
+            <button class="card">100 Taka</button>
+          </div>
+
+          <div>
+            <button class="card">200 Taka</button>
+          </div>
+
+          <div>
+            <button class="card">500 Taka</button>
+          </div>
+
+          <div>
+            <button class="card">1000 Taka</button>
+          </div>
+        </div>
+        <!-- take card section end -->
+
+        <div class="amount_taka">
+          <input type="text" placeholder="Other Amount (Taka)" />
+        </div>
+        <br />
+        <div class="done_now_button">
+          <button class="done_now">Done Now</button>
+        </div>
+      </section>
+      <!-- donate today section end -->
     </main>
     <!-- main section end -->
   </body>
