subscribe newsletter section completed

--- a/index.html
+++ b/index.html
@@ -335,6 +335,23 @@
         </div>
       </section>
       <!-- donate today section end -->
+
+      <!-- subscribe newsletter section start -->
+      <section class="subscribe_newsletter">
+        <h2>Subscribe Newsletter</h2>
+        <h6 class="">
+          Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+          cutting-edge technology, promoting inclusive growth.
+        </h6>
+
+        <div class="enail_subscribe_button">
+          <input type="email" placeholder="Enter your email here" />
+          <button class="subscribe_button" type="submit">Subscribe</button>
+        </div>
+
+        <p>We promise not to spam you!</p>
+      </section>
+      <!-- subscribe newsletter section end -->
     </main>
     <!-- main section end -->
   </body>
