footer section completed

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>Bangladesh2.0</title>
   </head>
   <body>
-    <!-- header section start  -->
+    <!-- header section start -->
     <header>
       <nav>
         <div class="logo">Bangladesh 2.0</div>
@@ -30,7 +30,7 @@
         </div>
       </nav>
     </header>
-    <!-- header section end  -->
+    <!-- header section end -->
 
     <!-- main section start -->
     <main>
@@ -58,6 +58,7 @@
 
         <!-- pillars of "bangladesh 2.0" card section start -->
         <div class="cards">
+          <!-- card one -->
           <div class="card">
             <img src="assets/card-icon.png" alt="" />
             <h4>Innovation</h4>
@@ -67,6 +68,7 @@
             </p>
           </div>
 
+          <!-- card two -->
           <div class="card">
             <img src="assets/card-icon.png" alt="" />
             <h4>Sustainability</h4>
@@ -76,6 +78,7 @@
             </p>
           </div>
 
+          <!-- card three -->
           <div class="card">
             <img src="assets/card-icon.png" alt="" />
             <h4>Infrastructure</h4>
@@ -85,6 +88,7 @@
             </p>
           </div>
 
+          <!-- card four -->
           <div class="card">
             <img src="assets/card-icon.png" alt="" />
             <h4>Empowerment</h4>
@@ -111,6 +115,7 @@
 
         <!-- the vision of future card section start -->
         <div class="cards">
+          <!-- card one -->
           <div class="card card1">
             <img src="assets/card-icon.png" alt="" />
             <h4>Digital Transformation</h4>
@@ -121,6 +126,7 @@
             <button class="learn_more learn_more1">Learn More</button>
           </div>
 
+          <!-- card two -->
           <div class="card card2">
             <img src="assets/card-icon.png" alt="" />
             <h4>Green Energy</h4>
@@ -131,6 +137,7 @@
             <button class="learn_more learn_more2">Learn More</button>
           </div>
 
+          <!-- card three -->
           <div class="card card3">
             <img src="assets/card-icon.png" alt="" />
             <h4>Modern Infrastructure</h4>
@@ -171,48 +178,60 @@
             <div class="h3">Questions</div>
             <div class="h3">Select Your Opinion</div>
           </div>
+
+          <!-- table start -->
           <table>
             <tbody>
+              <!-- tr one -->
               <tr>
                 <td class="questions">
                   Do you believe Bangladesh is on the right path toward becoming
                   a developed nation?
                 </td>
                 <td>
-                  <select name="" id="">
-                    <option>Yes, I Agree</option>
-                    <option>No, I don’t agree</option>
-                  </select>
+                  <div class="custom_select">
+                    <select name="" id="">
+                      <option>Yes, I Agree</option>
+                      <option>No, I don't</option>
+                    </select>
+                  </div>
                 </td>
               </tr>
 
+              <!-- tr two -->
               <tr>
                 <td class="questions">
-                  Do you believe Bangladesh is on the right path toward becoming
-                  a developed nation?
+                  Do you think Bangladesh is progressing effectively toward
+                  achieving developed nation status?
                 </td>
                 <td>
-                  <select name="" id="">
-                    <option>Yes, I Agree</option>
-                    <option>No, I don’t agree</option>
-                  </select>
+                  <div class="custom_select">
+                    <select name="" id="">
+                      <option>Yes, I Agree</option>
+                      <option>No, I don't</option>
+                    </select>
+                  </div>
                 </td>
               </tr>
 
+              <!-- tr three -->
               <tr>
                 <td class="questions">
-                  Do you believe Bangladesh is on the right path toward becoming
-                  a developed nation?
+                  Do you believe Bangladesh is on the correct trajectory for
+                  development and growth?
                 </td>
                 <td>
-                  <select name="" id="">
-                    <option>Yes, I Agree</option>
-                    <option>No, I don’t agree</option>
-                  </select>
+                  <div class="custom_select">
+                    <select name="" id="">
+                      <option>Yes, I Agree</option>
+                      <option>No, I don't</option>
+                    </select>
+                  </div>
                 </td>
               </tr>
             </tbody>
           </table>
+          <!-- table end -->
         </div>
       </section>
       <!-- opinion matters section end -->
@@ -228,7 +247,7 @@
           become a global model of development.
         </p>
 
-        <!-- bangladesh launches new satellite one-->
+        <!-- bangladesh launches new satellite one -->
         <div class="bangladesh_launches_new_satellite">
           <div>
             <img class="satelite" src="assets/satelite.png" alt="" />
@@ -250,7 +269,7 @@
           </div>
         </div>
 
-        <!-- bangladesh launches new satellite two-->
+        <!-- bangladesh launches new satellite two -->
         <div class="bangladesh_launches_new_satellite">
           <div class="content">
             <h2>Bangladesh Launches New Satellite</h2>
@@ -272,7 +291,7 @@
           </div>
         </div>
 
-        <!-- bangladesh launches new satellite three-->
+        <!-- bangladesh launches new satellite three -->
         <div class="bangladesh_launches_new_satellite">
           <div>
             <img class="satelite" src="assets/satelite.png" alt="" />
@@ -308,18 +327,22 @@
 
         <!-- take card section start -->
         <div class="taka_cards">
+          <!-- card one -->
           <div>
             <button class="card">100 Taka</button>
           </div>
 
+          <!-- card two -->
           <div>
             <button class="card">200 Taka</button>
           </div>
 
+          <!-- card three -->
           <div>
             <button class="card">500 Taka</button>
           </div>
 
+          <!-- card four -->
           <div>
             <button class="card">1000 Taka</button>
           </div>
@@ -354,5 +377,16 @@
       <!-- subscribe newsletter section end -->
     </main>
     <!-- main section end -->
+
+    <!-- footer section start -->
+    <footer>
+      <div class="logo">Bangladesh 2.0</div>
+      <div class="social_icons">
+        <img class="social_icon" src="assets/facebook.png" alt="" />
+        <img class="social_icon" src="assets/instagram.png" alt="" />
+        <img class="social_icon" src="assets/x.png" alt="" />
+      </div>
+    </footer>
+    <!-- footer section end -->
   </body>
 </html>
